Recursive column definitions and recontextualization in tables
New overpass URL
FSCAN should index on publication